fixed code based on jdk 11 (instead of jdk 17)